# bit_politeia

./: .gitignore  Bit_Politeia_architecture.docx  Bit_Politeia_architecture_backend.docx  Bit_Politeia_architecture_frontend.docx  Bit_Politeia_architecture_p2p.docx  Bit_Politeia_archive_blockchain.docx  Bit_Politeia_organization_structure_rule.docx  Bit_Politeia_proposal_rule.docx  Bit_Politeia_reputation_rule.docx  Bit_Politeia_reward_rule.docx  Bit_Politeia_transaction_rule.docx  CLAUDE.md  build.gradle.kts  main.py  pyproject.toml  requirements.txt  settings.gradle.kts  simulation_log.txt  start_with_supervisor.sh  sync_all_robust.ps1  task.md  walkthrough.md
.agent/workflows/: agent_invoker.md  app_architect.md  app_coder.md  architect_advisor.md  build_agent.md  cloudflare_coder.md  code_steward.md  cross_platform_architect.md  deploy_agent.md  log_agent.md  marketing_agent.md  product_planner.md
.antigravity/: rules.md
.tmp_extraction/docProps/: app.xml  core.xml
.tmp_extraction/word/: document.xml  numbering.xml  settings.xml
.tmp_extraction_new/customXml/: itemProps1.xml
.tmp_extraction_new/docProps/: app.xml  core.xml  custom.xml
.tmp_extraction_new/word/: document.xml  numbering.xml  settings.xml  styles.xml
.tmp_extraction_new/word/_rels/: document.xml.rels
backend/: CODEBASE_MAP.md  README.md  TROUBLESHOOTING_LAN.md  __init__.py  daily_report_2026-04-13.md  debug_arxiv.py  debug_brief.py  debug_webrtc.py  main.py  requirements.txt  run_bootstrap.py  test_lifespan.py  test_webrtc_rollback.py
backend/.learnings/: LEARNINGS.md
backend/app/agent/: context.py  pipeline.py  prompts.py  sandbox.py  skill_manager.py  tools.py  tools_cron.py  tools_exec.py  tools_fs.py  tools_identity.py  tools_meta.py  tools_search_ext.py  tools_task.py  tools_task_ext.py  tools_web.py
backend/app/api/: gateway.py
backend/app/bus/: events.py  queue.py
backend/app/channels/: base.py  feishu.py  telegram.py
backend/app/models/: schemas.py  session.py
backend/app/p2p_community/: __init__.py  blockchain.py  bootstrap_client.py  economy.py  governance.py  message_protocol.py  models.py  nat_traversal.py  network_manager.py  protocol.py  relay_client.py  reputation.py  tunnel_client.py
backend/app/schemas/: node_protocol.py
backend/app/services/: agent_service.py  bootstrap_service.py  bootstrap_storage.py  community_config.py  consolidation.py  context_manager.py  crypto_service.py  group_service.py  identity_service.py  knowledge_base.py  memory_store.py  p2p_server.py  p2p_service.py  relay_manager.py  resident_link.py  resident_memory_service.py  session_service.py  skill_manager.py  task_manager.py  transaction_manager.py  webrtc_service.py
backend/app/utils/: env_utils.py
backend/backend/data/: .model_last_check  memory_fts.db
backend/bit_politeia.egg-info/: PKG-INFO
backend/data/: .model_last_check
backend/data/chroma/: chroma.sqlite3
backend/memory/: 2026-02-07.md  2026-02-13.md  MEMORY.md  chat.jsonl  research.jsonl  system.jsonl
backend/scripts/: code_supervisor.py  generate_cert.py  manual_compress_daily_notes.py  merge_memory.py  stdp_simulation.py
backend/skills/deep-research/: SKILL.md  __init__.py
backend/skills/distributed-state-sync/: SKILL.md
backend/skills/git-commit/: SKILL.md
backend/skills/literature-review/: .gitkeep  SKILL.md
backend/skills/literature-watcher/: SKILL.md
backend/skills/long-doc-analyzer/: SKILL.md
backend/skills/parallel-web/: SKILL.md
backend/skills/pdf-reader/: SKILL.md
backend/skills/peer-review/: SKILL.md  __init__.py
backend/skills/planning-with-files/: SKILL.md
backend/skills/processing-docx/: SKILL.md  ooxml.md
backend/skills/processing-pdf/: SKILL.md
backend/skills/processing-pptx/: SKILL.md
backend/tests/: simple_test_hydration.py  test_archiving_execution.py  test_chatter_prevention.py  test_delta_sync.py  test_hydration.py  test_message_bus.py  test_message_protocol_id.py  test_payout_execution.py  test_reliability.py  test_reliability_unit.py  test_reliability_unit_isolated.py  test_status_default.py
backup/p2p_client/: __init__.py  discovery.py  host.py  protocol.py
docs/: Bit_Politeia_architecture.md  Bit_Politeia_architecture_backend.md  Bit_Politeia_architecture_frontend.md  Bit_Politeia_architecture_p2p.md  Bit_Politeia_archive_blockchain.md  Bit_Politeia_organization_structure_rule.md  Bit_Politeia_proposal_rule.md  Bit_Politeia_reputation_rule.md  Bit_Politeia_reward_rule.md  Bit_Politeia_transaction_rule.md  CHANNELS.md  DEPLOYMENT.md  bootstrap_node_removal_guide.md
docs/adr/: 0001-technology-stack.md  0002-application-architecture.md  0003-ui-navigation.md  0004-communication-protocol.md  0005-p2p-network-architecture.md  0006-architecture-evolution-openclaw-analysis.md  implementation_plan.md
frontend_android/: build.gradle.kts
frontend_web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend_web/src/: App.jsx  index.css
keys/: private_key.pem  public_key.pem
scripts/: convert_docx.py  simulate_growth.py
tests/: README.md  debug_arxiv.py  debug_bootstrap_api.py  debug_brief.py  debug_history_api.py  debug_imports.py  debug_linux_network.py  debug_linux_startup.py  debug_linux_uvicorn.py  debug_memory_read_git.py  debug_p2p_relay.py  debug_pdf_skill.py  debug_ws_server.py  dump_resident_history.py  fix_annotations.py  fix_pydantic_config.py  force_pydantic_v2.py  patch_chroma_config.py  pytest.ini  restore_config_classes.py  test_agent_config_fix.py  test_agent_integration.py  test_archive.py  test_bootstrap.py  test_bootstrap_connection.py  test_bootstrap_storage.py  test_consolidation.py  test_consolidation_range.py  test_context_manager.py  test_core_node_update_logic.py  test_economy.py  test_election_gossip.py  test_exec_tool.py  test_gateway_ws.py  test_governance.py  test_governance_persistence.py  test_governance_storage.py  test_hybrid_search.py  test_long_term_tasks.py  test_membership_admission_logic.py  (+41 more)
tests/regression/: __init__.py  conftest.py  test_p2p_message_status_bug.py
(+200 files in other folders)
